--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="seccion-contador" class="seccion-contador">
         <!-- Cabecera -->
         <div class="cabecera">
-            <img src="/assets/imgn.jpeg"
+            <img src="./assets/imgn.jpeg"
                 alt="" class="imagen-cabecera">
             <div class="titulo-cabecera">
                 <h1>Nuestro Tiempo Juntos</h1>
@@ -116,12 +116,12 @@
 
         <!-- Contenedor de las fotos -->
         <div class="fotos">
-            <img src="/assets/img3.jpeg" alt="Foto 1">
-            <img src="/assets/img2.jpeg" alt="Foto 2">
-            <img src="/assets/img1.jpeg" alt="Foto 3">
-            <img src="/assets/img4.jpeg" alt="Foto 4">
-            <img src="/assets/img5.jpeg" alt="Foto 5">
-            <img src="/assets/img6.jpeg" alt="Foto 6">
+            <img src="./assets/img3.jpeg" alt="Foto 1">
+            <img src="./assets/img2.jpeg" alt="Foto 2">
+            <img src="./assets/img1.jpeg" alt="Foto 3">
+            <img src="./assets/img4.jpeg" alt="Foto 4">
+            <img src="./assets/img5.jpeg" alt="Foto 5">
+            <img src="./assets/img6.jpeg" alt="Foto 6">
         </div>
 
         <!-- Botón para ir a la carta -->
